fix homepage header position and sizing on mobile

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -121,24 +121,24 @@ $app-card-padding: 1.5rem;
   /* z-index: 2; */
 }
 
-.App-header-menu-icon-block {
-  margin-right: 1.2rem;
-  margin-left: 0px;
-  display: flex;
-  align-items: center;
-}
+// .App-header-menu-icon-block {
+//   margin-right: 1.2rem;
+//   margin-left: 0px;
+//   display: flex;
+//   align-items: center;
+// }
 
-.App-header-menu-icon {
-  color: var(--color-white);
-  font-size: 2rem;
-  cursor: pointer;
-  opacity: 0.7;
-  margin: 0.9rem 1rem;
-}
+// .App-header-menu-icon {
+//   color: var(--color-white);
+//   font-size: 2rem;
+//   cursor: pointer;
+//   opacity: 0.7;
+//   margin: 0.9rem 1rem;
+// }
 
-.App-header-menu-icon:hover {
-  opacity: 0.9;
-}
+// .App-header-menu-icon:hover {
+//   opacity: 0.9;
+// }
 
 .App-highlight-box {
   background: linear-gradient(
@@ -1296,7 +1296,7 @@ button.App-button {
   }
 
   .App-header.small {
-    height: 10rem;
+    height: 8.8rem;
     // backdrop-filter: blur(4px);
     display: flex;
     justify-content: space-between;
@@ -1398,18 +1398,18 @@ button.App-button {
     padding: 0 0.8rem;
   }
 
-  .App-header-menu-icon-block {
-    margin-left: 0;
-    margin-right: 0.4rem;
-  }
+  // .App-header-menu-icon-block {
+  //   margin-left: 0;
+  //   margin-right: 0.4rem;
+  // }
 
   .mobile-cross-menu {
     margin-right: 1.2rem;
   }
 
-  .App-header-menu-icon {
-    margin: 0.4rem 0.5rem;
-  }
+  // .App-header-menu-icon {
+  //   margin: 0.4rem 0.5rem;
+  // }
 
   .App-header.small {
     padding-left: 0.6rem;
