--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -780,8 +780,8 @@
   }
 
   .Home-title {
-    font-size: 4.34rem;
-    line-height: 5.58rem;
+    font-size: 3.2rem;
+    line-height: 4.03rem;
     font-weight: bold;
     margin-bottom: 1.5rem;
     letter-spacing: 0;
